[package]
name = "rusthihifun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = {version="0.58",features=["serve-static","oapi","logging","catch-panic","websocket","session","affix","cors"]}
captcha = "0.0.9"
md5 = "0.7.0"
jsonwebtoken = "8"
serde = {version="1",features=["derive"]}
serde_json = "1"
rbs = { version = "4.4"}
rbatis = { version = "4.4"}
rbdc-pg={version="4.4"}
tokio = { version = "1", features = ["full"] }
tokio-stream = {version = "0.1.14", features = ["net"]}
futures-util = "0.3"
once_cell = "1.16.0"
redis = { version = "0.23.0", features = ["tokio-comp"] }
log = "0.4"
fast_log = "1.5"
idgenerator = "2.0.0"
